
syntax = "proto3";

package InterpretApi;

// The greeting service definition.
service Interpret {
  // Sends a greeting
  rpc Interpretation (InterpretRequest) returns (InterpretReply) {}
}

// The request message containing the user's name.
message InterpretRequest {
  string name = 1;
}

// The response message containing the greetings
message InterpretReply {
  string message = 1;
}